--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,22 @@ services:
     name: slot-booking-app
     runtime: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app"
+    startCommand: "gunicorn --bind 0.0.0.0:$PORT app:app"
     autoDeploy: true
+    envVars:
+      - key: FLASK_ENV
+        value: production
+      - key: SECRET_KEY
+        generateValue: true
+      - key: FORCE_HTTPS
+        value: "true"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: slot-booking-db
+          property: connectionString
+    healthCheckPath: /
+    
+databases:
+  - name: slot-booking-db
+    databaseName: slot_booking
+    user: slot_booking_user
